; ModuleID = '/home/carl/AnghaBench/linux/drivers/sh/intc/extr_access.c_intc_mode_prio.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/sh/intc/extr_access.c_intc_mode_prio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i64, i64, i64 (i64, i64, i64)*, i32)* @intc_mode_prio to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @intc_mode_prio(i64 %0, i64 %1, i64 (i64, i64, i64)* %2, i32 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64 (i64, i64, i64)*, align 8
  %8 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 (i64, i64, i64)* %2, i64 (i64, i64, i64)** %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i64 (i64, i64, i64)*, i64 (i64, i64, i64)** %7, align 8
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* %6, align 8
  %12 = load i32, i32* %8, align 4
  %13 = call i64 @intc_get_prio_level(i32 %12)
  %14 = call i64 %9(i64 %10, i64 %11, i64 %13)
  ret i64 %14
}

declare dso_local i64 @intc_get_prio_level(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
